2008-12-19 Heath Harrelson <heath.harrelson@gmail.com>
	Tag version 1.0.13

2008-07-25 Heath Harrelson <heath.harrelson@gmail.com>
	Tag version 1.0.12

2008-07-25 Heath Harrelson <heath.harrelson@gmail.com>
	* flexo_archives_widget.php: Change the plugin URI.
		Bump version number.
	* readme.txt: Update latest WordPress version tested.
		Updated stable version, description, installation, history.

2008-04-17 Heath Harrelson <heath.harrelson@gmail.com>
	Tag version 1.0.11

2008-04-16 Heath Harrelson <heath.harrelson@gmail.com>
	* flexo_archives_widget.php: Modify the widget to use
		wp_enqueue_script to load JS if it's available 
		(tip from planetozh.com). Bumped version number 
		to 1.0.11.
	* readme.txt: Update stable version number.

2008-04-16 Heath Harrelson <heath.harrelson@gmail.com>
	Tag version 1.0.10

2008-04-16 Heath Harrelson <heath.harrelson@gmail.com>
	* flexo_archives_widget.php: Add a description of the widget;
		displays when user is in widget management panel.
		Bump version number.
	* readme.txt: Update stable version number.

2008-04-05 Heath Harrelson <heath.harrelson@gmail.com>
	Tag version 1.0.9

2008-04-05 Heath Harrelson <heath.harrelson@gmail.com>
	* flexo_archives_widget.php: Bump version number
	* readme.txt: Update version numbers

2007-10-21 Heath Harrelson <heath.harrelson@gmail.com>
	Tag version 1.0.8

2007-10-21 Heath Harrelson <heath.harrelson@gmail.com>
	* flexo.js: Change logic to only display one list at a time.
	* flexo_archives_widget.php: Use sprintf in flexo_year_start.
		Bump version prior to tag.
	* readme.txt: Add more tags to widget, hopefully making it
		easier to find. Fix a typo in the FAQs. Add a note
		about how to test if your theme has a problem.

2007-10-20 Heath Harrelson <heath.harrelson@gmail.com>
	Tag version 1.0.7

2007-10-20 Heath Harrelson <heath.harrelson@gmail.com>
	* flexo.js: Bugfix for themes that don't set the ID of the 
		widget's root element.  We previously just refused